--- a/home.ui
+++ b/home.ui
@@ -26,6 +26,9 @@
     <property name="cursor">
      <cursorShape>BlankCursor</cursorShape>
     </property>
+    <property name="styleSheet">
+     <string notr="true"/>
+    </property>
     <property name="text">
      <string>Master Mode</string>
     </property>
@@ -38,6 +41,9 @@
       <width>250</width>
       <height>400</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/btn/111.png);</string>
     </property>
     <property name="text">
      <string>Start</string>
@@ -76,12 +82,14 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
