--- a/start.ui
+++ b/start.ui
@@ -23,6 +23,9 @@
       <height>60</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/btn/11.png);</string>
+    </property>
     <property name="text">
      <string>Home</string>
     </property>
@@ -47,12 +50,14 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
