--- a/ui_workspace/home.ui
+++ b/ui_workspace/home.ui
@@ -6,18 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>1024</width>
     <height>600</height>
    </rect>
+  </property>
+  <property name="cursor">
+   <cursorShape>BlankCursor</cursorShape>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="q_btn_mastermode">
+   <widget class="QPushButton" name="q_btn_manager">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>390</x>
       <y>30</y>
       <width>250</width>
       <height>400</height>
@@ -30,7 +33,7 @@
      <string notr="true"/>
     </property>
     <property name="text">
-     <string>Master Mode</string>
+     <string>Manager</string>
     </property>
    </widget>
    <widget class="QPushButton" name="q_btn_start">
@@ -42,6 +45,9 @@
       <height>400</height>
      </rect>
     </property>
+    <property name="cursor">
+     <cursorShape>BlankCursor</cursorShape>
+    </property>
     <property name="styleSheet">
      <string notr="true">border-image: url(:/btn/111.png);</string>
     </property>
@@ -52,11 +58,14 @@
    <widget class="QPushButton" name="q_btn_status">
     <property name="geometry">
      <rect>
-      <x>540</x>
+      <x>760</x>
       <y>30</y>
       <width>250</width>
       <height>400</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>BlankCursor</cursorShape>
     </property>
     <property name="text">
      <string>Status</string>
@@ -65,11 +74,14 @@
    <widget class="QPushButton" name="q_btn_stop">
     <property name="geometry">
      <rect>
-      <x>630</x>
+      <x>9</x>
       <y>450</y>
-      <width>160</width>
+      <width>1000</width>
       <height>100</height>
      </rect>
+    </property>
+    <property name="cursor">
+     <cursorShape>BlankCursor</cursorShape>
     </property>
     <property name="text">
      <string>STOP</string>
@@ -81,8 +93,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>26</height>
+     <width>1024</width>
+     <height>22</height>
     </rect>
    </property>
   </widget>
