--- a/ui_workspace/stop.ui
+++ b/ui_workspace/stop.ui
@@ -20,8 +20,8 @@
    <widget class="QPushButton" name="q_btn_home">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>30</y>
+      <x>10</x>
+      <y>10</y>
       <width>120</width>
       <height>60</height>
      </rect>
@@ -33,20 +33,20 @@
      <string>Home</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="q_lb_stop">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>100</y>
-      <width>671</width>
-      <height>351</height>
+      <x>10</x>
+      <y>80</y>
+      <width>1000</width>
+      <height>460</height>
      </rect>
     </property>
     <property name="cursor">
      <cursorShape>BlankCursor</cursorShape>
     </property>
     <property name="text">
-     <string>Stop!</string>
+     <string/>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
