--- a/ui_workspace/home.ui
+++ b/ui_workspace/home.ui
@@ -49,7 +49,7 @@
      <cursorShape>BlankCursor</cursorShape>
     </property>
     <property name="styleSheet">
-     <string notr="true">border-image: url(:/btn/111.png);</string>
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Start</string>
@@ -100,8 +100,6 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources>
-  <include location="resource.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
