--- a/ui_workspace/stop.ui
+++ b/ui_workspace/stop.ui
@@ -22,28 +22,31 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>120</width>
-      <height>60</height>
+      <width>100</width>
+      <height>50</height>
      </rect>
     </property>
     <property name="cursor">
-     <cursorShape>BlankCursor</cursorShape>
+     <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/img_btn/img_home.jpg);</string>
     </property>
     <property name="text">
-     <string>Home</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="q_lb_stop">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>80</y>
-      <width>1000</width>
-      <height>460</height>
+      <x>0</x>
+      <y>0</y>
+      <width>1024</width>
+      <height>600</height>
      </rect>
     </property>
     <property name="cursor">
-     <cursorShape>BlankCursor</cursorShape>
+     <cursorShape>ArrowCursor</cursorShape>
     </property>
     <property name="text">
      <string/>
@@ -52,6 +55,8 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <zorder>q_lb_stop</zorder>
+   <zorder>q_btn_home</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -59,12 +64,14 @@
      <x>0</x>
      <y>0</y>
      <width>1024</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
