--- a/ui_workspace/home.ui
+++ b/ui_workspace/home.ui
@@ -17,7 +17,7 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: qlineargradient(spread:pad, x1:1, y1:1, x2:1, y2:1, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(255, 255, 255, 255));</string>
+   <string notr="true">background-color: rgb(0, 0, 0);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QPushButton" name="q_btn_manager">
@@ -80,14 +80,18 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>870</x>
+      <x>860</x>
       <y>90</y>
-      <width>81</width>
+      <width>100</width>
       <height>17</height>
      </rect>
     </property>
     <property name="cursor">
      <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 13pt &quot;Arial&quot;;
+color: white;</string>
     </property>
     <property name="text">
      <string>소독액 수위</string>
@@ -96,14 +100,18 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>650</x>
+      <x>640</x>
       <y>90</y>
-      <width>67</width>
+      <width>85</width>
       <height>17</height>
      </rect>
     </property>
     <property name="cursor">
      <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">font: 13pt &quot;Arial&quot;;
+color: white;</string>
     </property>
     <property name="text">
      <string>일일 누적</string>
@@ -124,6 +132,10 @@
     <property name="cursor">
      <cursorShape>ArrowCursor</cursorShape>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: 13pt &quot;Arial&quot;;
+color: white;</string>
+    </property>
     <property name="text">
      <string>-</string>
     </property>
@@ -143,6 +155,10 @@
     <property name="cursor">
      <cursorShape>ArrowCursor</cursorShape>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: 13pt &quot;Arial&quot;;
+color: white;</string>
+    </property>
     <property name="text">
      <string>-</string>
     </property>
@@ -161,6 +177,9 @@
     </property>
     <property name="cursor">
      <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/img_btn/img_reset.jpg);</string>
     </property>
     <property name="text">
      <string/>
@@ -194,6 +213,10 @@
     <property name="cursor">
      <cursorShape>ArrowCursor</cursorShape>
     </property>
+    <property name="styleSheet">
+     <string notr="true">font: 13pt &quot;Arial&quot;;
+color: white;</string>
+    </property>
     <property name="text">
      <string>주간 누적</string>
     </property>
@@ -212,6 +235,10 @@
     </property>
     <property name="cursor">
      <cursorShape>ArrowCursor</cursorShape>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/img_btn/img_reset.jpg);
+</string>
     </property>
     <property name="text">
      <string/>
