--- a/ui_workspace/resource.qrc
+++ b/ui_workspace/resource.qrc
@@ -1,11 +1,13 @@
 <RCC>
   <qresource prefix="img_btn">
-    <file>img_stop.jpg</file>
+    <file>img_down.jpg</file>
     <file>img_home.jpg</file>
     <file>img_logoA.jpg</file>
     <file>img_logoB.jpg</file>
     <file>img_manager.jpg</file>
+    <file>img_reset.jpg</file>
     <file>img_start.jpg</file>
     <file>img_stop.jpg</file>
+    <file>img_up.jpg</file>
   </qresource>
 </RCC>
